Fixed admin sidebar spacing

--- a/app/admin/adminComponents/adminSidebar/adminSidebar.module.css
+++ b/app/admin/adminComponents/adminSidebar/adminSidebar.module.css
@@ -29,7 +29,7 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: .5rem;
     margin-top: 2rem;
 }
 
